adjusting routes to work with frontend
